# my-haskell-animations

./: .gitignore  README.md  animate.cabal  example.cabal  flake.nix
src/: Main.hs  Map.hs  NFATree.hs
