cabal-version:   3.0
name:            animate
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , reanimate
                    , diagrams
                    , text
                    , directory
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
executable map
    import:           warnings
    main-is:          Map.hs
    build-depends:    base
                    , reanimate
                    , text
                    , directory
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
executable nfa-tree
    import:           warnings
    main-is:          NFATree.hs
    build-depends:    base
                    , diagrams
                    , diagrams-lib
                    , diagrams-svg
                    , diagrams-contrib
                    , diagrams-rasterific
                    , text
                    , directory
                    , random
                    , lens
                    , active
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
